--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
 # Site settings
-title: Paul E. Soto
-name: Paul E. Soto
-subtitle: PhD Candidate in Economics
+title: Zhe Wang
+name: Zhe Wang
+subtitle: Master in Applied Mathematics
 email: paul.soto@upf.edu
 description: >
   PhD Candidate in Economics
