--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
 
   - name: LinkedIn
     icon: linkedin
-    username: Paul E. Soto
+    username: 王哲
     url: https://www.linkedin.com/in/哲-王-119639170/
     desc: Connect with me on LinkedIn
     share: true
