--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
 
   - name: LinkedIn
     icon: linkedin
-    username: 王哲
-    url: https://www.linkedin.com/in/哲-王-119639170/
+    username: Zhe Wang
+    url: https://www.linkedin.com/in/zhe-wang-119639170/
     desc: Connect with me on LinkedIn
     share: true
